# CodeReview

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260706_0001_auth_projects.py  20260706_0002_upload_sessions.py  20260706_0003_review_tasks.py  20260706_0004_project_scanning.py  20260706_0005_code_indexing.py  20260706_0006_retrieval_records.py  20260707_0007_agent_workflow.py  20260707_0008_retrieval_trace_hardening.py  20260707_0009_node_run_timestamps.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  critic.py  planner.py  reviewer.py  usage.py
backend/app/api/: auth.py  health.py  projects.py  reports.py  reviews.py  router.py  uploads.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  redis.py  runtime.py  security.py
backend/app/graph/: __init__.py  builder.py  nodes.py  routes.py  state.py
backend/app/indexing/: __init__.py  database.py  metrics.py  provider.py  service.py  text.py
backend/app/languages/: __init__.py  base.py  java.py  python.py  registry.py  schemas.py  tree_sitter_adapter.py
backend/app/llm/: __init__.py  client.py  structured.py  usage.py
backend/app/models/: __init__.py  base.py  index.py  issue.py  node_run.py  project.py  report.py  retrieval.py  task.py  upload.py  user.py
backend/app/retrieval/: __init__.py  context_assembler.py  hybrid_retriever.py  keyword_search.py  rrf.py  vector_search.py
backend/app/scanner/: __init__.py  file_filter.py  file_scanner.py  priority.py  schemas.py
backend/tests/: conftest.py  fakes.py
(+134 files in other folders)
