[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview-agent-backend"
version = "0.1.0"
description = "Backend API for the CodeReview Agent platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.18,<1.19",
  "asyncpg>=0.31,<0.32",
  "fastapi>=0.139,<0.140",
  "pwdlib[argon2]>=0.3,<0.4",
  "pyjwt>=2.11,<3",
  "pydantic-settings>=2.14,<2.15",
  "python-multipart>=0.0.22,<0.1",
  "redis>=8.0,<8.1",
  "sqlalchemy>=2.0.51,<2.1",
  "uvicorn[standard]>=0.50,<0.51",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.22,<0.23",
  "httpx2>=2.5,<2.6",
  "mypy>=2.1,<2.2",
  "pytest>=9.1,<9.2",
  "pytest-cov>=7.1,<7.2",
  "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
